lab3/style.css
html, body {
  height: 100%;
  background-color: #222629;
  color: white;
}

.profiles a {
  text-decoration: none;
  color: white;
}

.name {
  position: relative;
  top: 2rem;
  margin: 0 0 2rem 2rem;
}

.list-group-horizontal {
  width: calc(100% - min(20vw, 40vh) - 6rem);
  margin-left: 2rem;
  font-style: italic;
}

.list-group-horizontal li {
  border: 0; 
  background-color: #222629;
  color: white;
}

.profilePhoto {
  width: min(20vw, 40vh);
  position: absolute;
  top: 0;
  right: 0;
  margin: 2rem;
}

.Summary {
  width: calc(100% - min(20vw, 40vh) - 6rem);
  margin-left: 2rem;
  margin-right: 2rem;
}

.Skills {
  width: calc(100% - min(20vw, 40vh) - 6rem);
  margin-left: 2rem;
  margin-right: 2rem;
}

.Education {
  margin-left: 2rem;
}

.Education li {
  font-size: medium;
}

.Education h3 {
  font-size: large;
}
.Education h4 {
  font-size: medium;
  font-style: italic;
}

.Education i {
  font-size: medium;
}

.education-item {
  margin-bottom: 1rem;
}

.Experience {
  margin-left: 2rem;
}

.Experience li {
  font-size: medium;
}

.Experience h3 {
  font-size: large;
}
.Experience h4 {
  font-size: medium;
  font-style: italic;
}

.Experience i {
  font-size: medium;
}

.experience-item {
  margin-bottom: 1rem;
}

/* Homepage --------------------------------*/
#homepage {
  text-align: center;
}

.header h1 {
  font-family: 'Noto Sans', sans-serif;
  font-size: 70px;
  margin-top: 300px;
}
.header p {
  font-family: 'Cardo', serif;
  font-size: 20px;
  margin-top: -40px;
}

.topPhrase {
  font-size: 20px;
  font-family: 'Noto Sans', sans-serif;
  margin-top: 80px;
}
.bottomPhrase {
  font-size: 20px;
  font-family: 'Cardo', serif;
  margin-top: -20px;
}

.examples, .profiles {
  display: flex;
  justify-content: center;
  vertical-align: top;
}
.examples h3, .profiles h3 {
  font-family: 'Noto Sans', sans-serif;
}
.examples p, .profiles p {
  font-family: 'Cardo', serif;
}
.examples img, .profiles img {
  width: 85%;
  height: 50%;
}
#example1, #example2, #example3, #profile1, #profile2, #profile3, #profile4, #profile5 {
  display: inline-block;
  text-align: center;
  vertical-align: center;
  background-color: #474B4F;
  margin-bottom: 50px;
  padding: 15px;
}
#example1, #example2, #example3 {
  width: 30%;
}
#profile1, #profile2, #profile3, #profile4, #profile5 {
  width: 17%;
}

#example2 {
  margin-left: 30px;
  margin-right: 30px;
}
#profile1, #profile3 {
  margin-right: 25px;
}
#profile5, #profile3 {
  margin-left: 25px;
}

